Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9420

Bad Check slipped into repo

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.10.0
    • Lustre 2.10.0, Upstream
    • 3
    • 9223372036854775807

      When the patch for LU-5710 landed, a check for message size was landed that should not have been.  This check was part of a patch in LU-7650 which was later pulled because it broke things. LU-5718 picked up this code via its many rebases (it too forever to land LU-5718 which is the core problem here).

      This ticket has been opened to remove this incorrect check.  

            doug Doug Oucharek (Inactive)
            doug Doug Oucharek (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: