LU-9420 lnd: Remove a bad check which slipped in

When the patch for LU-5710 landed, a check for message size was landed
that should not have been.  This check was part of a patch in LU-7650
which was later pulled because it broke things. LU-5718 picked up this
code via its many rebases (it too forever to land LU-5718 which is the
core problem here).

This patch removes that messaage size check.

Test-Parameters: trivial
Signed-off-by: Doug Oucharek <doug.s.oucharek@intel.com>
Change-Id: I3d114ec16cfbfd994efd9aee55e28a09159597be
Reviewed-on: https://review.whamcloud.com/26891
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Sonia Sharma <sonia.sharma@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Amir Shehata <amir.shehata@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>